[package]
name = "hide-remote-desktop"
version = "0.1.0"
authors = ["qbx2 <sunyeop97@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.7.1"
winapi = { version = "0.3.9", features = ["libloaderapi", "shlobj", "minwindef", "ntdef", "errhandlingapi", "winerror", "winuser"] }

[profile.release]
lto = true
